--- a/_modules/crawler/crawljob.html
+++ b/_modules/crawler/crawljob.html
@@ -69,13 +69,13 @@
 <span class="kn">import</span> <span class="nn">util.paths</span> <span class="kn">as</span> <span class="nn">paths</span>
 <span class="kn">import</span> <span class="nn">crawler.cleaner</span> <span class="kn">as</span> <span class="nn">cleaner</span>
 <span class="kn">import</span> <span class="nn">crawler.xmlgen</span> <span class="kn">as</span> <span class="nn">xmlgen</span>
-<span class="kn">import</span> <span class="nn">crawler.rsync</span> <span class="kn">as</span> <span class="nn">rsync</span>
 <span class="kn">import</span> <span class="nn">util.filelock</span> <span class="kn">as</span> <span class="nn">lock</span>
 <span class="kn">import</span> <span class="nn">crawler.git</span> <span class="kn">as</span> <span class="nn">git</span>
 <span class="kn">import</span> <span class="nn">crawler.exceptions</span>
 <span class="kn">import</span> <span class="nn">crawler.dbgen</span>
 
 <span class="kn">from</span> <span class="nn">dbrecover.pickle_recover</span> <span class="kn">import</span> <span class="n">PickleDBRecover</span>
+<span class="kn">from</span> <span class="nn">crawler.rsync</span> <span class="kn">import</span> <span class="n">rsync</span>
 
 
 <div class="viewcode-block" id="CrawlJob"><a class="viewcode-back" href="../../crawlstuff.html#crawler.crawljob.CrawlJob">[docs]</a><span class="k">class</span> <span class="nc">CrawlJob</span><span class="p">(</span><span class="nb">object</span><span class="p">):</span>
@@ -183,6 +183,7 @@
                 <span class="n">os</span><span class="o">.</span><span class="n">mkdir</span><span class="p">(</span><span class="n">domain_path</span><span class="p">)</span>
             <span class="k">except</span> <span class="ne">OSError</span><span class="p">:</span>
                 <span class="c"># This is expected</span>
+                <span class="c"># (I swear)</span>
                 <span class="k">pass</span>
 
             <span class="n">git_proc</span> <span class="o">=</span> <span class="n">git</span><span class="o">.</span><span class="n">Git</span><span class="p">(</span><span class="n">domain</span><span class="p">)</span>
@@ -190,7 +191,7 @@
             <span class="n">git_proc</span><span class="o">.</span><span class="n">checkout</span><span class="p">(</span><span class="s">&#39;empty&#39;</span><span class="p">)</span>
             <span class="n">git_proc</span><span class="o">.</span><span class="n">branch</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">__metalist</span><span class="p">[</span><span class="mi">0</span><span class="p">][</span><span class="s">&#39;commitTime&#39;</span><span class="p">])</span>
 
-            <span class="n">rsync</span><span class="o">.</span><span class="n">Rsync</span><span class="p">(</span><span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">__path</span><span class="p">,</span> <span class="n">domain</span><span class="p">),</span> <span class="n">content_path</span><span class="p">)</span><span class="o">.</span><span class="n">start_sync</span><span class="p">()</span>
+            <span class="n">rsync</span><span class="p">(</span><span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">__path</span><span class="p">,</span> <span class="n">domain</span><span class="p">),</span> <span class="n">content_path</span><span class="p">)</span>
 
             <span class="n">git_proc</span><span class="o">.</span><span class="n">commit</span><span class="p">(</span><span class="s">&#39;Site {domain_name} was crawled.&#39;</span>
                             <span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">domain_name</span><span class="o">=</span><span class="n">domain</span><span class="p">))</span>
