--- a/_modules/crawler/filter.html
+++ b/_modules/crawler/filter.html
@@ -127,6 +127,7 @@
         <span class="c"># and stop if any filter says no</span>
         <span class="k">for</span> <span class="n">source</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">__source_list</span><span class="p">:</span>
             <span class="k">try</span><span class="p">:</span>
+                <span class="k">print</span><span class="p">(</span><span class="s">&#39;Exec:&#39;</span><span class="p">,</span> <span class="n">source</span><span class="p">)</span>
                 <span class="k">exec</span><span class="p">(</span><span class="n">source</span><span class="p">[</span><span class="mi">1</span><span class="p">],</span> <span class="n">input_dict</span><span class="p">)</span>
             <span class="k">except</span><span class="p">:</span>
                 <span class="c"># an error inside the filter happened,</span>
@@ -150,24 +151,51 @@
 <span class="c">###########################################################################</span>
 
 </div></div>
-<span class="k">def</span> <span class="nf">main</span><span class="p">():</span>
-    <span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    Tests</span>
-<span class="sd">    &quot;&quot;&quot;</span>
-    <span class="kn">import</span> <span class="nn">os</span>
-    <span class="n">os</span><span class="o">.</span><span class="n">system</span><span class="p">(</span><span class="s">&quot;&quot;&quot;</span>
-<span class="s">        mkdir -p /tmp/py_filter</span>
-<span class="s">        echo &#39;print(&quot;a.py:&quot;, filter_input)</span><span class="se">\n</span><span class="s">filter_result = True</span><span class="se">\n</span><span class="s">del filter_result&#39;  &gt; /tmp/py_filter/a.py</span>
-<span class="s">        echo &#39;print(&quot;b.py:&quot;, filter_input)</span><span class="se">\n</span><span class="s">filter_result = False&#39; &gt; /tmp/py_filter/b.py</span>
-<span class="s">        &quot;&quot;&quot;</span><span class="p">)</span>
-
-    <span class="n">f</span> <span class="o">=</span> <span class="n">FilterSystem</span><span class="p">(</span><span class="s">&#39;/tmp/py_filter&#39;</span><span class="p">)</span>
-    <span class="k">print</span><span class="p">(</span><span class="s">&#39;=&gt; &#39;</span><span class="p">,</span> <span class="n">f</span><span class="o">.</span><span class="n">check</span><span class="p">({</span><span class="s">&#39;input&#39;</span><span class="p">:</span> <span class="mi">42</span><span class="p">}))</span>
-    <span class="n">f</span><span class="o">.</span><span class="n">clear</span><span class="p">()</span>
-    <span class="k">print</span><span class="p">(</span><span class="s">&#39;=&gt; &#39;</span><span class="p">,</span> <span class="n">f</span><span class="o">.</span><span class="n">check</span><span class="p">({</span><span class="s">&#39;input&#39;</span><span class="p">:</span> <span class="mi">21</span><span class="p">}))</span>
-
 <span class="k">if</span> <span class="n">__name__</span> <span class="o">==</span> <span class="s">&#39;__main__&#39;</span><span class="p">:</span>
-    <span class="n">main</span><span class="p">()</span>
+    <span class="kn">import</span> <span class="nn">os</span>
+    <span class="kn">import</span> <span class="nn">shutil</span>
+    <span class="kn">import</span> <span class="nn">unittest</span>
+
+    <span class="k">def</span> <span class="nf">sanitize_source</span><span class="p">(</span><span class="n">source</span><span class="p">):</span>
+        <span class="k">return</span> <span class="s">&#39;</span><span class="se">\n</span><span class="s">&#39;</span><span class="o">.</span><span class="n">join</span><span class="p">([</span><span class="n">line</span><span class="o">.</span><span class="n">strip</span><span class="p">()</span> <span class="k">for</span> <span class="n">line</span> <span class="ow">in</span> <span class="n">source</span><span class="o">.</span><span class="n">splitlines</span><span class="p">()])</span>
+
+    <span class="n">FILTER_TESTDIR</span> <span class="o">=</span> <span class="s">&#39;pyfilter_tests&#39;</span>
+    <span class="n">FILTER_SOURCES</span> <span class="o">=</span> <span class="p">{</span>
+            <span class="s">&#39;a.py&#39;</span><span class="p">:</span> <span class="s">&quot;&quot;&quot;</span>
+<span class="s">                    filter_result = True</span>
+<span class="s">                    del filter_result</span>
+<span class="s">                    &quot;&quot;&quot;</span><span class="p">,</span>
+            <span class="s">&#39;b.py&#39;</span><span class="p">:</span> <span class="s">&quot;&quot;&quot;</span>
+<span class="s">                    if filter_input[&#39;test_input&#39;] == 42: filter_result = False</span>
+<span class="s">                    &quot;&quot;&quot;</span>
+    <span class="p">}</span>
+
+    <span class="k">class</span> <span class="nc">TestFilter</span><span class="p">(</span><span class="n">unittest</span><span class="o">.</span><span class="n">TestCase</span><span class="p">):</span>
+        <span class="k">def</span> <span class="nf">setUp</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+            <span class="c"># Write sources to disk</span>
+            <span class="n">os</span><span class="o">.</span><span class="n">mkdir</span><span class="p">(</span><span class="n">FILTER_TESTDIR</span><span class="p">)</span>
+            <span class="k">for</span> <span class="n">name</span><span class="p">,</span> <span class="n">source</span> <span class="ow">in</span> <span class="n">FILTER_SOURCES</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
+                <span class="k">with</span> <span class="nb">open</span><span class="p">(</span><span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">FILTER_TESTDIR</span><span class="p">,</span> <span class="n">name</span><span class="p">),</span> <span class="s">&#39;w&#39;</span><span class="p">)</span> <span class="k">as</span> <span class="n">test_source</span><span class="p">:</span>
+                    <span class="n">test_source</span><span class="o">.</span><span class="n">write</span><span class="p">(</span><span class="n">sanitize_source</span><span class="p">(</span><span class="n">source</span><span class="p">))</span>
+
+        <span class="k">def</span> <span class="nf">do_filtering_tests</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">fisys</span><span class="p">):</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">assertTrue</span><span class="p">(</span><span class="n">fisys</span><span class="o">.</span><span class="n">check</span><span class="p">({</span><span class="s">&#39;test_input&#39;</span><span class="p">:</span> <span class="mi">21</span><span class="p">}))</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">assertFalse</span><span class="p">(</span><span class="n">fisys</span><span class="o">.</span><span class="n">check</span><span class="p">({</span><span class="s">&#39;test_input&#39;</span><span class="p">:</span> <span class="mi">42</span><span class="p">}))</span>
+
+        <span class="k">def</span> <span class="nf">test_filter</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+            <span class="n">fisys</span> <span class="o">=</span> <span class="n">FilterSystem</span><span class="p">(</span><span class="n">FILTER_TESTDIR</span><span class="p">)</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">do_filtering_tests</span><span class="p">(</span><span class="n">fisys</span><span class="p">)</span>
+            <span class="n">fisys</span><span class="o">.</span><span class="n">clear</span><span class="p">()</span>
+            <span class="n">fisys</span><span class="o">.</span><span class="n">load</span><span class="p">(</span><span class="n">plugin_path</span> <span class="o">=</span> <span class="n">FILTER_TESTDIR</span><span class="p">)</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">do_filtering_tests</span><span class="p">(</span><span class="n">fisys</span><span class="p">)</span>
+            <span class="n">fisys</span><span class="o">.</span><span class="n">clear</span><span class="p">()</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">assertTrue</span><span class="p">(</span><span class="n">fisys</span><span class="o">.</span><span class="n">check</span><span class="p">({</span><span class="s">&#39;test_input&#39;</span><span class="p">:</span> <span class="mi">42</span><span class="p">}))</span>
+
+        <span class="k">def</span> <span class="nf">tearDown</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+            <span class="n">shutil</span><span class="o">.</span><span class="n">rmtree</span><span class="p">(</span><span class="n">FILTER_TESTDIR</span><span class="p">)</span>
+
+
+    <span class="n">unittest</span><span class="o">.</span><span class="n">main</span><span class="p">()</span>
 </pre></div>
 
           </div>
