--- a/_modules/crawler/rsync.html
+++ b/_modules/crawler/rsync.html
@@ -61,48 +61,67 @@
 <span class="kn">import</span> <span class="nn">logging</span>
 
 
-<div class="viewcode-block" id="Rsync"><a class="viewcode-back" href="../../rsync.html#crawler.rsync.Rsync">[docs]</a><span class="k">class</span> <span class="nc">Rsync</span><span class="p">(</span><span class="nb">object</span><span class="p">):</span>
+<div class="viewcode-block" id="rsync"><a class="viewcode-back" href="../../rsync.html#crawler.rsync.rsync">[docs]</a><span class="k">def</span> <span class="nf">rsync</span><span class="p">(</span><span class="n">src_path</span><span class="p">,</span> <span class="n">dest_path</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">    Starts the synchronization process,</span>
+<span class="sd">    this function will block until finished</span>
+
+<span class="sd">    :src_path: the directory/file to sync</span>
+<span class="sd">    :dest_path: the directory to sync files to</span>
 <span class="sd">    &quot;&quot;&quot;</span>
-    <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">src_path</span><span class="p">,</span> <span class="n">dest_path</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">        A simple rsync wrapper that ,,mirrors&#39;&#39;</span>
-<span class="sd">        the content of the source to destination path</span>
+    <span class="n">cmd</span> <span class="o">=</span> <span class="p">[</span><span class="s">&#39;rsync&#39;</span><span class="p">,</span> <span class="s">&#39;-acP&#39;</span><span class="p">,</span> <span class="n">src_path</span><span class="p">,</span> <span class="n">dest_path</span><span class="p">]</span>
+    <span class="n">process</span> <span class="o">=</span> <span class="n">subprocess</span><span class="o">.</span><span class="n">Popen</span><span class="p">(</span><span class="n">cmd</span><span class="p">,</span> <span class="n">stdout</span><span class="o">=</span><span class="n">subprocess</span><span class="o">.</span><span class="n">PIPE</span><span class="p">,</span>
+                                    <span class="n">stderr</span><span class="o">=</span><span class="n">subprocess</span><span class="o">.</span><span class="n">PIPE</span><span class="p">)</span>
 
-<span class="sd">        :src_path: source path</span>
-<span class="sd">        :dest_path: destination path</span>
+    <span class="n">logging</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s">&#39;Rsyncing: &#39;</span> <span class="o">+</span> <span class="s">&#39;  &#39;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">cmd</span><span class="p">))</span>
+    <span class="n">out</span><span class="p">,</span> <span class="n">err</span> <span class="o">=</span> <span class="n">process</span><span class="o">.</span><span class="n">communicate</span><span class="p">()</span>
+    <span class="k">if</span> <span class="n">process</span><span class="o">.</span><span class="n">poll</span><span class="p">()</span> <span class="ow">is</span> <span class="ow">not</span> <span class="mi">0</span><span class="p">:</span>
+        <span class="n">logging</span><span class="o">.</span><span class="n">warning</span><span class="p">(</span><span class="s">&#39;rsync failed with stderr-output: {1}&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">err</span><span class="p">))</span>
 
-<span class="sd">        &quot;&quot;&quot;</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">__src</span> <span class="o">=</span> <span class="n">src_path</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">__dest</span> <span class="o">=</span> <span class="n">dest_path</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">__process</span> <span class="o">=</span> <span class="bp">None</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">__pid</span> <span class="o">=</span> <span class="bp">None</span>
 
-<div class="viewcode-block" id="Rsync.start_sync"><a class="viewcode-back" href="../../rsync.html#crawler.rsync.Rsync.start_sync">[docs]</a>    <span class="k">def</span> <span class="nf">start_sync</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">        Starts the synchronization process,</span>
-<span class="sd">        this function will block until finished</span>
+<span class="c">###########################################################################</span>
+<span class="c">#                                Unittests                                #</span>
+<span class="c">###########################################################################</span>
 
-<span class="sd">        &quot;&quot;&quot;</span>
-        <span class="n">cmd</span> <span class="o">=</span> <span class="s">&#39;rsync -acP {src} {dest}&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">src</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">__src</span><span class="p">,</span> <span class="n">dest</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">__dest</span><span class="p">)</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">__process</span> <span class="o">=</span> <span class="n">subprocess</span><span class="o">.</span><span class="n">Popen</span><span class="p">(</span><span class="n">cmd</span><span class="p">,</span> <span class="n">shell</span><span class="o">=</span><span class="bp">True</span><span class="p">,</span>
-                                               <span class="n">stdout</span><span class="o">=</span><span class="n">subprocess</span><span class="o">.</span><span class="n">PIPE</span><span class="p">,</span>
-                                               <span class="n">stderr</span><span class="o">=</span><span class="n">subprocess</span><span class="o">.</span><span class="n">PIPE</span><span class="p">)</span>
-
-        <span class="bp">self</span><span class="o">.</span><span class="n">__pid</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">__process</span><span class="o">.</span><span class="n">pid</span>
-
-        <span class="n">logging</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s">&#39;Syncing from {0} to {1}&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">__src</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">__dest</span><span class="p">))</span>
-
-        <span class="n">out</span><span class="p">,</span> <span class="n">err</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">__process</span><span class="o">.</span><span class="n">communicate</span><span class="p">()</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">__pid</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">__process</span><span class="o">.</span><span class="n">poll</span><span class="p">()</span>
-
-        <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">__pid</span> <span class="ow">is</span> <span class="ow">not</span> <span class="mi">0</span><span class="p">:</span>
-            <span class="n">logging</span><span class="o">.</span><span class="n">warning</span><span class="p">(</span><span class="s">&#39;rsync failed with exit-code {0}: {1}&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">__pid</span><span class="p">,</span> <span class="n">err</span><span class="p">))</span>
-
-</div></div>
+</div>
 <span class="k">if</span> <span class="n">__name__</span> <span class="o">==</span> <span class="s">&#39;__main__&#39;</span><span class="p">:</span>
-    <span class="n">r</span> <span class="o">=</span> <span class="n">Rsync</span><span class="p">(</span><span class="s">&#39;/home/christoph/music/*&#39;</span><span class="p">,</span> <span class="s">&#39;/home/christoph/temp/&#39;</span><span class="p">)</span>
-    <span class="k">print</span><span class="p">(</span><span class="n">r</span><span class="o">.</span><span class="n">start_sync</span><span class="p">())</span>
+    <span class="kn">import</span> <span class="nn">unittest</span>
+    <span class="kn">import</span> <span class="nn">os</span>
+    <span class="kn">import</span> <span class="nn">shutil</span>
+
+    <span class="c"># Awaited:</span>
+    <span class="c"># src/</span>
+    <span class="c">#   test_file</span>
+    <span class="c">#</span>
+    <span class="c"># dest/</span>
+    <span class="c">#   src/</span>
+    <span class="c">#     test_file</span>
+
+    <span class="n">RSYNC_DST</span> <span class="o">=</span> <span class="s">&#39;rsync_test_dst&#39;</span>
+    <span class="n">RSYNC_SRC</span> <span class="o">=</span> <span class="s">&#39;rsync_test_src&#39;</span>
+    <span class="n">TEST_FILE</span> <span class="o">=</span> <span class="s">&#39;test_file&#39;</span>
+
+    <span class="c"># This test doesn&#39;t do much, except testing for the very basic</span>
+    <span class="c"># functionality - what else should one do here?</span>
+    <span class="k">class</span> <span class="nc">TestRsync</span><span class="p">(</span><span class="n">unittest</span><span class="o">.</span><span class="n">TestCase</span><span class="p">):</span>
+        <span class="k">def</span> <span class="nf">setUp</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+            <span class="n">os</span><span class="o">.</span><span class="n">mkdir</span><span class="p">(</span><span class="n">RSYNC_SRC</span><span class="p">)</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">__test_file</span> <span class="o">=</span> <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">RSYNC_SRC</span><span class="p">,</span> <span class="n">TEST_FILE</span><span class="p">)</span>
+            <span class="k">with</span> <span class="nb">open</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">__test_file</span><span class="p">,</span> <span class="s">&#39;w&#39;</span><span class="p">)</span> <span class="k">as</span> <span class="n">test_file</span><span class="p">:</span>
+                <span class="n">test_file</span><span class="o">.</span><span class="n">write</span><span class="p">(</span><span class="s">&#39;To be or not to be - Do bee doo be doo&#39;</span><span class="p">)</span>
+
+        <span class="k">def</span> <span class="nf">test_sync</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">assertTrue</span><span class="p">(</span><span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">exists</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">__test_file</span><span class="p">))</span>
+            <span class="k">print</span><span class="p">(</span><span class="s">&#39;Syncing&#39;</span><span class="p">,</span> <span class="n">RSYNC_SRC</span><span class="p">,</span> <span class="s">&#39;=&gt;&#39;</span><span class="p">,</span> <span class="n">RSYNC_DST</span><span class="p">)</span>
+            <span class="n">rsync</span><span class="p">(</span><span class="n">RSYNC_SRC</span><span class="p">,</span> <span class="n">RSYNC_DST</span><span class="p">)</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">assertTrue</span><span class="p">(</span><span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">exists</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">__test_file</span><span class="p">))</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">assertTrue</span><span class="p">(</span><span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">exists</span><span class="p">(</span><span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">RSYNC_DST</span><span class="p">,</span> <span class="n">RSYNC_SRC</span><span class="p">,</span> <span class="n">TEST_FILE</span><span class="p">)))</span>
+
+        <span class="k">def</span> <span class="nf">tearDown</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+            <span class="n">shutil</span><span class="o">.</span><span class="n">rmtree</span><span class="p">(</span><span class="n">RSYNC_SRC</span><span class="p">,</span> <span class="n">ignore_errors</span><span class="o">=</span><span class="bp">True</span><span class="p">)</span>
+            <span class="n">shutil</span><span class="o">.</span><span class="n">rmtree</span><span class="p">(</span><span class="n">RSYNC_DST</span><span class="p">,</span> <span class="n">ignore_errors</span><span class="o">=</span><span class="bp">True</span><span class="p">)</span>
+
+    <span class="n">unittest</span><span class="o">.</span><span class="n">main</span><span class="p">()</span>
 </pre></div>
 
           </div>
