--- a/_modules/util/files.html
+++ b/_modules/util/files.html
@@ -56,7 +56,9 @@
 <span class="sd">&quot;&quot;&quot;</span>
 <span class="n">__author__</span> <span class="o">=</span> <span class="s">&#39;Christopher Pahl&#39;</span>
 
+<span class="kn">import</span> <span class="nn">unittest</span>
 <span class="kn">import</span> <span class="nn">logging</span>
+<span class="kn">import</span> <span class="nn">os</span>
 
 
 <div class="viewcode-block" id="unique_items_from_file"><a class="viewcode-back" href="../../utils.html#util.files.unique_items_from_file">[docs]</a><span class="k">def</span> <span class="nf">unique_items_from_file</span><span class="p">(</span><span class="n">path</span><span class="p">):</span>
@@ -70,8 +72,9 @@
     <span class="k">try</span><span class="p">:</span>
         <span class="k">with</span> <span class="nb">open</span><span class="p">(</span><span class="n">path</span><span class="p">,</span> <span class="s">&#39;r&#39;</span><span class="p">)</span> <span class="k">as</span> <span class="n">urlfile</span><span class="p">:</span>
             <span class="k">for</span> <span class="n">line</span> <span class="ow">in</span> <span class="n">urlfile</span><span class="p">:</span>
-                <span class="k">if</span> <span class="n">line</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span> <span class="o">!=</span> <span class="s">&#39;#&#39;</span><span class="p">:</span>
-                    <span class="n">urls</span><span class="o">.</span><span class="n">add</span><span class="p">(</span><span class="n">line</span><span class="o">.</span><span class="n">strip</span><span class="p">())</span>
+                <span class="n">line</span> <span class="o">=</span> <span class="n">line</span><span class="o">.</span><span class="n">strip</span><span class="p">()</span>
+                <span class="k">if</span> <span class="nb">len</span><span class="p">(</span><span class="n">line</span><span class="p">)</span> <span class="o">&gt;</span> <span class="mi">0</span> <span class="ow">and</span> <span class="n">line</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span> <span class="o">!=</span> <span class="s">&#39;#&#39;</span><span class="p">:</span>
+                    <span class="n">urls</span><span class="o">.</span><span class="n">add</span><span class="p">(</span><span class="n">line</span><span class="p">)</span>
     <span class="k">except</span> <span class="ne">IOError</span><span class="p">:</span>
         <span class="n">logging</span><span class="o">.</span><span class="n">exception</span><span class="p">(</span><span class="s">&quot;cannot read url list from disk.&quot;</span><span class="p">)</span>
     <span class="k">return</span> <span class="n">urls</span>
@@ -81,7 +84,41 @@
 <span class="c">#                                unittest                                 #</span>
 <span class="c">###########################################################################</span></div>
 <span class="k">if</span> <span class="n">__name__</span> <span class="o">==</span> <span class="s">&#39;__main__&#39;</span><span class="p">:</span>
-    <span class="k">print</span><span class="p">(</span><span class="n">unique_items_from_file</span><span class="p">(</span><span class="s">&#39;../url.txt&#39;</span><span class="p">))</span>
+    <span class="k">class</span> <span class="nc">TestUtilFiles</span><span class="p">(</span><span class="n">unittest</span><span class="o">.</span><span class="n">TestCase</span><span class="p">):</span>
+        <span class="k">def</span> <span class="nf">setUp</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+            <span class="c"># generate testfile with 7 urls of which 3 are equal</span>
+            <span class="n">testinput</span> <span class="o">=</span> <span class="s">&quot;www.heise.de</span><span class="se">\n</span><span class="s"> </span><span class="se">\</span>
+<span class="s">                         www.heise.de</span><span class="se">\n</span><span class="s"> </span><span class="se">\</span>
+<span class="s">                         www.golem.de   </span><span class="se">\n</span><span class="s"> </span><span class="se">\</span>
+<span class="s">                         # a comment </span><span class="se">\n</span><span class="s"> </span><span class="se">\</span>
+<span class="s">                         www.linux.org</span><span class="se">\n</span><span class="s"> </span><span class="se">\</span>
+<span class="s">                         </span><span class="se">\n\</span>
+<span class="s">                         www.heise.de</span><span class="se">\n</span><span class="s"> </span><span class="se">\</span>
+<span class="s">                         www.phoronix.com</span><span class="se">\n</span><span class="s"> </span><span class="se">\</span>
+<span class="s">                         # ignore this</span><span class="se">\n</span><span class="s"> </span><span class="se">\</span>
+<span class="s">                         www.golem.de</span><span class="se">\n</span><span class="s">&quot;</span>
+
+            <span class="c"># feed test file with input</span>
+            <span class="k">with</span> <span class="nb">open</span><span class="p">(</span><span class="s">&#39;testfile_files.txt&#39;</span><span class="p">,</span> <span class="s">&#39;w&#39;</span><span class="p">)</span> <span class="k">as</span> <span class="n">test_file</span><span class="p">:</span>
+                <span class="n">test_file</span><span class="o">.</span><span class="n">write</span><span class="p">(</span><span class="n">testinput</span><span class="p">)</span>
+
+        <span class="k">def</span> <span class="nf">test_num_of_elements</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+            <span class="c"># get url list from file</span>
+            <span class="n">urls</span> <span class="o">=</span> <span class="n">unique_items_from_file</span><span class="p">(</span><span class="s">&#39;testfile_files.txt&#39;</span><span class="p">)</span>
+            <span class="c"># only 4 urls should be unique</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">assertTrue</span><span class="p">(</span><span class="nb">len</span><span class="p">(</span><span class="n">urls</span><span class="p">)</span> <span class="o">==</span> <span class="mi">4</span><span class="p">)</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">assertEqual</span><span class="p">({</span>
+                <span class="s">&#39;www.linux.org&#39;</span><span class="p">,</span>
+                <span class="s">&#39;www.heise.de&#39;</span><span class="p">,</span>
+                <span class="s">&#39;www.golem.de&#39;</span><span class="p">,</span>
+                <span class="s">&#39;www.phoronix.com&#39;</span><span class="p">},</span> <span class="n">urls</span><span class="p">)</span>
+
+        <span class="k">def</span> <span class="nf">tearDown</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+            <span class="c"># clean test data</span>
+            <span class="n">os</span><span class="o">.</span><span class="n">remove</span><span class="p">(</span><span class="s">&#39;testfile_files.txt&#39;</span><span class="p">)</span>
+
+    <span class="c"># starts unittest</span>
+    <span class="n">unittest</span><span class="o">.</span><span class="n">main</span><span class="p">()</span>
 </pre></div>
 
           </div>
