--- a/_modules/util/times.html
+++ b/_modules/util/times.html
@@ -59,7 +59,7 @@
 
 <span class="kn">import</span> <span class="nn">time</span>
 <span class="kn">import</span> <span class="nn">os</span>
-
+<span class="kn">import</span> <span class="nn">unittest</span>
 
 <div class="viewcode-block" id="get_ctime"><a class="viewcode-back" href="../../utils.html#util.times.get_ctime">[docs]</a><span class="k">def</span> <span class="nf">get_ctime</span><span class="p">(</span><span class="n">file_path</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;</span>
@@ -101,13 +101,21 @@
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">return</span> <span class="n">time</span><span class="o">.</span><span class="n">strftime</span><span class="p">(</span><span class="n">form</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">time</span><span class="o">.</span><span class="n">gmtime</span><span class="p">(</span><span class="n">seconds</span><span class="p">)))</span>
 
-
 <span class="c">###########################################################################</span>
 <span class="c">#                                unittest                                 #</span>
-<span class="c">###########################################################################</span>
-</div>
+<span class="c">###########################################################################</span></div>
 <span class="k">if</span> <span class="n">__name__</span> <span class="o">==</span> <span class="s">&#39;__main__&#39;</span><span class="p">:</span>
-    <span class="k">print</span><span class="p">(</span><span class="s">&quot;times {0} und {1}&quot;</span><span class="p">,</span> <span class="n">get_ctime</span><span class="p">(</span><span class="s">&#39;/dev/null&#39;</span><span class="p">),</span> <span class="n">get_sys_time</span><span class="p">())</span>
+    <span class="k">class</span> <span class="nc">TestTimes</span><span class="p">(</span><span class="n">unittest</span><span class="o">.</span><span class="n">TestCase</span><span class="p">):</span>
+
+        <span class="k">def</span> <span class="nf">setUp</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+            <span class="n">os</span><span class="o">.</span><span class="n">system</span><span class="p">(</span><span class="s">&#39;touch testfile_for_timestamp&#39;</span><span class="p">)</span>
+
+        <span class="c"># no useful possibilities</span>
+
+        <span class="k">def</span> <span class="nf">tearDown</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+            <span class="n">os</span><span class="o">.</span><span class="n">remove</span><span class="p">(</span><span class="s">&#39;testfile_for_timestamp&#39;</span><span class="p">)</span>
+
+    <span class="n">unittest</span><span class="o">.</span><span class="n">main</span><span class="p">()</span>
 </pre></div>
 
           </div>
