--- a/_modules/index.html
+++ b/_modules/index.html
@@ -46,28 +46,34 @@
           <div class="body">
             
   <h1>All modules for which code is available</h1>
-<ul><li><a href="cli/cmdparser.html">cli.cmdparser</a></li>
-<li><a href="cmanager/crawlmanager.html">cmanager.crawlmanager</a></li>
-<li><a href="cmanager/intervalmanager.html">cmanager.intervalmanager</a></li>
-<li><a href="config/reader.html">config.reader</a></li>
-<li><a href="crawler/cleaner.html">crawler.cleaner</a></li>
-<li><a href="crawler/crawljob.html">crawler.crawljob</a></li>
-<li><a href="crawler/dbgen.html">crawler.dbgen</a></li>
+<ul><li><a href="archive/cli/cmdparser.html">archive.cli.cmdparser</a></li>
+<li><a href="archive/cmanager/crawlmanager.html">archive.cmanager.crawlmanager</a></li>
+<li><a href="archive/cmanager/intervalmanager.html">archive.cmanager.intervalmanager</a></li>
+<li><a href="archive/config/reader.html">archive.config.reader</a></li>
+<li><a href="archive/crawler/cleaner.html">archive.crawler.cleaner</a></li>
+<li><a href="archive/crawler/crawljob.html">archive.crawler.crawljob</a></li>
+<li><a href="archive/crawler/dbgen.html">archive.crawler.dbgen</a></li>
+<li><a href="archive/crawler/extractor.html">archive.crawler.extractor</a></li>
+<li><a href="archive/crawler/filter.html">archive.crawler.filter</a></li>
+<li><a href="archive/crawler/git.html">archive.crawler.git</a></li>
+<li><a href="archive/crawler/rsync.html">archive.crawler.rsync</a></li>
+<li><a href="archive/crawler/wget.html">archive.crawler.wget</a></li>
+<li><a href="archive/crawler/xmlgen.html">archive.crawler.xmlgen</a></li>
+<li><a href="archive/crawler/xmlreader.html">archive.crawler.xmlreader</a></li>
+<li><a href="archive/dbrecover/pickle_recover.html">archive.dbrecover.pickle_recover</a></li>
+<li><a href="archive/dbrecover/recover.html">archive.dbrecover.recover</a></li>
+<li><a href="archive/dbrecover/repair.html">archive.dbrecover.repair</a></li>
+<li><a href="archive/dbrecover/xml_recover.html">archive.dbrecover.xml_recover</a></li>
+<li><a href="archive/javadapter/server.html">archive.javadapter.server</a></li>
+<li><a href="archive/util/filelock.html">archive.util.filelock</a></li>
+<li><a href="archive/util/files.html">archive.util.files</a></li>
+<li><a href="archive/util/paths.html">archive.util.paths</a></li>
+<li><a href="archive/util/times.html">archive.util.times</a></li>
 <li><a href="crawler/extractor.html">crawler.extractor</a></li>
-<li><a href="crawler/filter.html">crawler.filter</a></li>
-<li><a href="crawler/git.html">crawler.git</a></li>
 <li><a href="crawler/rsync.html">crawler.rsync</a></li>
-<li><a href="crawler/wget.html">crawler.wget</a></li>
 <li><a href="crawler/xmlgen.html">crawler.xmlgen</a></li>
 <li><a href="crawler/xmlreader.html">crawler.xmlreader</a></li>
-<li><a href="dbrecover/pickle_recover.html">dbrecover.pickle_recover</a></li>
-<li><a href="dbrecover/recover.html">dbrecover.recover</a></li>
-<li><a href="dbrecover/repair.html">dbrecover.repair</a></li>
-<li><a href="dbrecover/xml_recover.html">dbrecover.xml_recover</a></li>
-<li><a href="javadapter/server.html">javadapter.server</a></li>
 <li><a href="util/filelock.html">util.filelock</a></li>
-<li><a href="util/files.html">util.files</a></li>
-<li><a href="util/paths.html">util.paths</a></li>
 <li><a href="util/times.html">util.times</a></li>
 </ul>
 
