--- a/spec_diffs.html
+++ b/spec_diffs.html
@@ -72,6 +72,7 @@ For safety manual locking of the DB is done.</li>
 <li><tt class="docutils literal"><span class="pre">Git</span></tt> has more methods like <tt class="docutils literal"><span class="pre">list_branches</span></tt> and <tt class="docutils literal"><span class="pre">list_commits</span></tt> (which are needed for XML-Recover)</li>
 <li>Recovering is also possible with pickled metalists.</li>
 <li>Javadapter protocol has been a little streamlined.</li>
+<li>No sql subfolder anymore, sql statements were moved directly to backend (crawler/statements.py) and frontend</li>
 </ul>
 </div>
 </div>
