--- a/_modules/index.html
+++ b/_modules/index.html
@@ -49,6 +49,7 @@
 <ul><li><a href="archive/cli/cmdparser.html">archive.cli.cmdparser</a></li>
 <li><a href="archive/cmanager/crawlmanager.html">archive.cmanager.crawlmanager</a></li>
 <li><a href="archive/cmanager/intervalmanager.html">archive.cmanager.intervalmanager</a></li>
+<li><a href="archive/config/handler.html">archive.config.handler</a></li>
 <li><a href="archive/config/reader.html">archive.config.reader</a></li>
 <li><a href="archive/crawler/cleaner.html">archive.crawler.cleaner</a></li>
 <li><a href="archive/crawler/crawljob.html">archive.crawler.crawljob</a></li>
