--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
 </li>
 </ul>
 </div>
+<a class="reference internal image-reference" href="_images/vim.png"><img alt="proudly coded in gVim" class="align-right" src="_images/vim.png" style="width: 76.8px; height: 76.8px;" /></a>
 </div>
 </div>
 <div class="section" id="indices-and-tables">
